--- a/style.css
+++ b/style.css
@@ -31,6 +31,12 @@
        ヘッダー
   =============== */
 
+  #main_visual {
+    height: 755px;
+    overflow: hidden;
+    position: relative;
+  }
+
   header {
     position: fixed;
     display: flex;
@@ -41,7 +47,12 @@
     margin: 0 0 0 0;
     z-index: 99;
     background-color: #805320;
+    height: 80px;
    }
+
+    header.top {
+        background: none;
+    }
 
    .store_logo {
     font-weight: bold;
@@ -249,10 +260,6 @@
    }
 
 
-
-
-   
-
   .main_visual_pic1 {
     width: 100%;
     background-color: #805320;
@@ -300,6 +307,7 @@
     text-align: center;
     font-weight: 200;
     padding-bottom: 10px;
+    text-shadow: 0px 4px 4px rgb(0,0,0,0.25);
   }
 
   .sab_title {
@@ -308,11 +316,12 @@
     text-align: center;
     color: #fff9ec;
     padding-top: 5px;
+    text-shadow: 0px 4px 4px rgb(0,0,0,0.25);
   }
 
-  .messages {
+  /* .messages {
     padding: 30px 0;
-  }
+  } */
 
   .message_03 {
     padding: 20px 0;
@@ -326,6 +335,7 @@
     color: #fff;
     letter-spacing: 3px;
     padding-bottom: 30px;
+  
   }
 
   .button_content {
@@ -402,6 +412,48 @@
     padding-top: 40px;
   }
 
+  /* ===========
+      Store 
+  ============= */
+
+  .store_pic {
+    height: 500px;
+    overflow: hidden;
+    position: relative;
+    margin-top: 30px;
+  }
+
+  .pic_6 {
+    width: 100%;
+    bottom: 100px;
+    position: relative;
+  }
+
+  .messages_03 {
+    padding: 30px 30px 0 30px;
+  }
+
+  .message_03_02 {
+    padding: 20px 0;
+    font-size: 16px;
+    letter-spacing: 3px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .message_07 {
+    font-family: "YuKyokasho",sans-serif;
+    font-size: 16px;
+    color: #fff;
+    letter-spacing: 3px;
+    /* padding-bottom: 8px; */
+  }
+
+  .div_2 {
+    padding: 0 15px 0 15px;
+  }
+
+
   /* =========
       Blog 
   ========== */
@@ -445,6 +497,7 @@
     text-align: center;
     border-bottom: solid 2px #fff9ec;
     padding-bottom: 10px;
+    text-shadow: 0px 4px 4px rgb(0,0,0,0.25);
   }
 
   .button_content_01 {
@@ -684,5 +737,66 @@
     justify-content: space-between;
   }
 
- }
+  /* =========================
+      about natural kitchen
+  =========================== */ 
 
+  .about_natural_kitchen {
+    padding: 10px 0;
+  }
+
+  .title_03 {
+    color: #fff9ec;
+    font-family: "Caveat","Playfair Display",serif;
+    font-size: 50px;
+    font-weight: 200;
+    text-align: center;
+    padding-bottom: 10px;
+    text-shadow: 0px 4px 4px rgb(0,0,0,0.25);
+  }
+
+  .sab_title_2 {
+    font-family: "YuKyokasho",sans-serif;
+    font-size: 17px;
+    color: #fff9ec;
+    padding-left: 42px;
+    text-shadow: 0px 4px 4px rgb(0,0,0,0.25);
+  }
+
+  .pic_7 {
+    width: 100%;
+    padding: 30px auto;
+  }
+
+  #content02_2 {
+    padding: 80px 0px;
+    background-color: #C28643;
+  }
+
+  .about_natural_kitchen {
+    padding: 30px 0;
+  }
+
+  .message_03_03 {
+    padding: 60px 40px;
+  }
+
+  .content02_2 {
+    background-color: #C28643;
+  }
+
+  .content02_2 div {
+    height: 320px;
+    width: 85%;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .pic_8 {
+    width: 100%;
+  }
+
+  
+
+
+ }
